# BASNet

./: README.md  pyproject.toml
basnet/: __init__.py  configuration_basnet.py  image_processing_basnet.py  modeling_basnet.py
demo/: BASNet_test.ipynb
scripts/: push_to_hub.py
tests/: contest.py  test_basnet.py  test_load_pretrained_model.py
