[tool.poetry]
name = "basnet"
version = "0.1.0"
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"
packages = [{ include = "basnet" }]

[tool.poetry.dependencies]
python = "^3.10"
transformers = { version = ">=4.0.0", extras = ["torch"] }
torchvision = ">=0.2.1"
torch = ">=1.0.0"
opencv-python = "^4.10.0.84"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.1.5"
mypy = ">=1.0.0"
pytest = ">=6.0.0"

[tool.mypy]
python_version = "3.10"
no_strict_optional = true
no_site_packages = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
